# Jacal

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  test_ai_stress  test_debug  test_debug.cpp  test_mapeditor  test_mapeditor.cpp  test_network.cpp  test_spectator
.github/workflows/: build.yml  build.yml.disabled
console/: main.cpp
core/: CMakeLists.txt  ai.cpp  ai.h  game.cpp  game.h  game_state.cpp  game_state.h  map_def.cpp  map_def.h  rules.cpp  rules.h  types.cpp  types.h
docs/: GITHUB_SETUP.md  MAP_GENERATION.md
home/user/claude/Jacal/core/: rules.cpp
home/user/claude/Jacal/tests/: test_core.cpp
maps/: bridges.jmap  classic.jmap  custom_duel.jmap  custom_duel_wc3.jmap  custom_hangman_island.jmap  custom_hangman_island_wc3.jmap  custom_small_duel.jmap  custom_turtle_rock.jmap  custom_turtle_rock_wc3.jmap  custom_two_bridges.jmap  custom_two_bridges_wc3.jmap  duel.jmap  hangman.jmap  turtle.jmap
qml-client/: CMakeLists.txt  HUD.qml  MapEditor.qml  gamecontroller.cpp  gamecontroller.h  icon.qrc  main.cpp  main.qml  qml.qrc
qml-client/qml/: GameBoard.qml  HUD.qml  NetworkScreen.qml  TileItem.qml  main.qml  qmldir
qml-client/src/: boardmodel.cpp  boardmodel.h  gamecontroller.cpp  gamecontroller.h  gameserver.cpp  gameserver.h  main.cpp  networkclient.cpp  networkclient.h  protocol.h  updatechecker.cpp  updatechecker.h
tests/: test_ai_stress.cpp  test_core.cpp  test_spectator.cpp
tools/: dump_board.cpp
